# material-voxel-renderer

./: .build_version  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: project_setting.cmake  vcpkg_env.cmake
deps_party/global_utils/include/: global-register-error.hpp  global-variables-pool.hpp
deps_party/global_utils/share/global_utils/: global_utils-config.cmake  global_utils-targets.cmake
source/application/: CMakeLists.txt  app.cpp
source/interface_library/: CMakeLists.txt
source/interface_library/interface/: ExecutorInterface.hpp  RendererInterface.hpp
source/static_library/: CMakeLists.txt  Executor.cpp  Executor.hpp  ImRenderer.cpp  ImRenderer.hpp  OpenglComputeShaderFramer.cpp  OpenglComputeShaderFramer.hpp  OpenglFramer.cpp  OpenglFramer.hpp  OpenglImRenderer.cpp  OpenglImRenderer.hpp  OpenglRasterizationFramer.cpp  OpenglRasterizationFramer.hpp  OpenglRenderer.cpp  OpenglRenderer.hpp  camera_info.hpp  camera_wraper.hpp  load_raw_file.hpp  texture_from.hpp
source/static_library/interface/: CommandQueue.hpp  ImFramerInterface.hpp  pixel.hpp  voxel.hpp
source/static_library/interface/implement/: OpenglCommandQueue.hpp
